--- a/style.css
+++ b/style.css
@@ -4,17 +4,19 @@ body {
   background-color: #2c2141;
 }
 
-.box {
-  background: #e5e5e5;
+.flex {
   
+  min-height: 100vh;
   display: flex;
+  flex-flow: row wrap ;
   justify-content: center;
   align-items: center;
+  
 }
-div {
-  color: #fff;
-  background: #2d2d2d;
-  padding: 12px;
-  margin-right: 4px;
+.flex__item {
+  background: #e5e5e5;
+  height: 100px;
+  
+  width: 100px;
   
 }
