--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 body {
   background-color: #2c2141;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .flex {
@@ -15,8 +16,8 @@ body {
 }
 .flex__item {
   background: #e5e5e5;
-  height: 100px;
+  height: 320px;
   
-  width: 100px;
+  width: 624px;
   
 }
