add margin and new color header

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 body {
   background-color: #2c2141;
   font-family: Arial, Helvetica, sans-serif;
+  font-style: normal;
 }
 
 .flex {
@@ -21,6 +22,9 @@ body {
   
   width: 624px;
   border-radius: 16px;
+  display: flex;
+
+  
 }
 .flex__item--color {
   color: #ED6D05;
@@ -33,5 +37,10 @@ body {
    
 }
 .flex__item--image {
-  display: grid;
+  margin: 32px;
+}
+.flex__item--header {
+  font-style: italic;
+  
+  color: #545454;
 }
