--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   background-color: #2c2141;
   font-family: Arial, Helvetica, sans-serif;
   font-style: normal;
+  line-height: 22px;
 }
 
 .flex {
@@ -43,6 +44,7 @@ body {
   font-style: italic;
   
   color: #545454;
+  line-height: 0px;
 }
 .flex__item--content {
   flex-wrap: wrap;
@@ -51,4 +53,9 @@ body {
 }
 .flex__item--coment {
   margin-top: 24px;
+}
+.flex__item--footer {
+  line-height: 90px;
+}
+.flex__item--header--first {
 }
